feature: add method level security, chnage throw exceptions and handle it