@@ -15,12 +15,13 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.context.request.ServletWebRequest;
 import org.springframework.web.context.request.WebRequest;
+import org.springframework.web.server.ResponseStatusException;
 
 import static org.springframework.data.crossstore.ChangeSetPersister.NotFoundException;
+import static org.springframework.http.HttpStatus.*;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RestControllerAdvice
@@ -35,44 +36,51 @@ public class GlobalExceptionHandler extends DefaultErrorAttributes {
                 .getFieldErrors()
                 .stream()
                 .map(error -> new ConstraintsViolationError(error.getField(), error.getDefaultMessage()))
-                .collect(Collectors.toList());
-        return ofType(request, HttpStatus.BAD_REQUEST, "You are missing some fields", validationErrors);
+                .toList();
+        return ofType(request, BAD_REQUEST, "You are missing some fields", validationErrors);
     }
 
     @SneakyThrows
     @ExceptionHandler(HttpMessageNotReadableException.class)
     public ResponseEntity<Map<String, Object>> handle(HttpMessageNotReadableException exception, WebRequest request) {
         log.info("Http message is missing request body");
-        return ofType(request, HttpStatus.BAD_REQUEST, "You are missing request body", null);
+        return ofType(request, BAD_REQUEST, "You are missing request body", null);
     }
 
     @SneakyThrows
     @ExceptionHandler(DataAccessException.class)
     public ResponseEntity<Map<String, Object>> handle(DataAccessException exception, WebRequest request) {
         log.error("Database error occurred", exception);
-        return ofType(request, HttpStatus.INTERNAL_SERVER_ERROR, "Database error occurred", null);
+        return ofType(request, INTERNAL_SERVER_ERROR, "Database error occurred", null);
     }
 
     @SneakyThrows
     @ExceptionHandler(NotFoundException.class)
-    @ResponseStatus(HttpStatus.NOT_FOUND)
+    @ResponseStatus(NOT_FOUND)
     public ResponseEntity<Map<String, Object>> handle(NotFoundException exception, WebRequest request) {
         log.error("Not found error occurred", exception);
-        return ofType(request, HttpStatus.NOT_FOUND, exception.getMessage(), null);
+        return ofType(request, NOT_FOUND, exception.getMessage(), null);
     }
 
     @ExceptionHandler
-    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    @ResponseStatus(BAD_REQUEST)
     public ResponseEntity<Map<String, Object>> handle(RuntimeException exception, WebRequest request) {
         log.error("Element not found", exception);
-        return ofType(request, HttpStatus.BAD_REQUEST, exception.getMessage(), null);
+        return ofType(request, BAD_REQUEST, exception.getMessage(), null);
     }
 
     @SneakyThrows
     @ExceptionHandler(Exception.class)
     public ResponseEntity<Map<String, Object>> handle(Exception exception, WebRequest request) {
         log.error("An unexpected error occurred", exception);
-        return ofType(request, HttpStatus.INTERNAL_SERVER_ERROR, "An unexpected error occurred", null);
+        return ofType(request, INTERNAL_SERVER_ERROR, "An unexpected error occurred", null);
+    }
+
+    @SneakyThrows
+    @ExceptionHandler(ResponseStatusException.class)
+    public ResponseEntity<Map<String, Object>> handle(ResponseStatusException exception, WebRequest request) {
+        log.error("Response status exception", exception);
+        return ofType(request, NOT_FOUND, exception.getMessage(), null);
     }
 
     private ResponseEntity<Map<String, Object>> ofType(WebRequest request, HttpStatus status,
